# WhimsicalMeals

./: .gitignore  .ruff.toml  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md
config/: settings.py  urls.py
core/: urls.py  views.py
core/static/core/scss/: core.scss
core/static/scss/: core.scss
core/templates/core/: base.html  index.html
dishes/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
dishes/migrations/: 0001_initial.py
dishes/static/scss/: dishes-common.scss  dishes.scss
dishes/templates/dishes/: base.html  delete.html  demo.html  generate.html  list.html  ranking.html  recent.html
docs/: app.md
ingredients/: admin.py  forms.py  models.py  urls.py  views.py
ingredients/migrations/: 0001_initial.py
ingredients/static/scss/: ingredients-shared.scss
ingredients/templates/ingredients/: base.html  create.html  delete.html  list.html  quick_add.html  update.html
static/scss/: main.scss
static/scss/abstracts/: _color.scss  _variables.scss
static/scss/components/: _footer.scss  _hamburger.scss  _header.scss  _index.scss  _ingredients.scss  _nav.scss  _pagination.scss  _ranking.scss  _recent_dishes.scss
templates/: base.html
templates/components/: pagination.html  ranking.html  recent_dishes.html
templates/includes/: _footer.html  _header.html  _nav.html
users/: urls.py  views.py
users/static/scss/: auth.scss
users/templates/users/: base.html  login.html  signup.html
(+23 files in other folders)
