[project]
name = "whimsicalmeals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.3",
    "django-compressor>=4.5.1",
    "django-libsass>=0.9",
    "django-sass-processor>=1.4.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "ruff>=0.12.0",
]
